WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222993
REGRESSION (
r274109
?): Catalina Perf tests failing due to unexpected output
https://bugs.webkit.org/show_bug.cgi?id=222993
Summary
REGRESSION (r274109?): Catalina Perf tests failing due to unexpected output
Robert Jenner
Reported
2021-03-09 14:33:09 PST
It looks like the Catalina Perf is failing due to unexpected output Running 206 tests Running Animation/balls.html (1 of 206) error: Animation/balls.html 2021-03-08 17:09:25.226 com.apple.WebKit.WebContent.Development[63077:5238896] -[NSURL init] called; this results in an NSURL instance with an empty URL string. Please use one of the documented NSURL initialization methods instead (initWithString:, initFileURLWithPath:, etc.). This message shown only once. 2021-03-08 17:09:25.227 WebKitTestRunner[63073:5238814] -[NSURL init] called; this results in an NSURL instance with an empty URL string. Please use one of the documented NSURL initialization methods instead (initWithString:, initFileURLWithPath:, etc.). This message shown only once.
https://build.webkit.org/#/builders/20/builds/283/steps/9/logs/stdio
Attachments
Patch
(1.84 KB, patch)
2021-03-09 17:14 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-03-09 14:33:49 PST
<
rdar://problem/75235585
>
Robert Jenner
Comment 2
2021-03-09 14:38:08 PST
This did not occur on a run with
https://trac.webkit.org/changeset/274100/webkit
. but it did with
https://trac.webkit.org/changeset/274117/webkit
It appears related to REGRESSION (
r273541
): Payloads requiring NSURL in serialization fail
https://bugs.webkit.org/show_bug.cgi?id=222856
https://trac.webkit.org/changeset/274109/webkit
Ryan Haddad
Comment 3
2021-03-09 14:48:49 PST
FWIW this output is showing up in stderr for some layout tests, too:
https://build.webkit.org/results/Apple-BigSur-Release-WK2-Tests/r274168%20(842)/results.html
Brent Fulgham
Comment 4
2021-03-09 17:14:09 PST
Created
attachment 422782
[details]
Patch
EWS
Comment 5
2021-03-09 18:53:09 PST
Committed
r274191
: <
https://commits.webkit.org/r274191
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422782
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug