REGRESSION (r274109): Catalina Perf tests failing due to unexpected output (222993) https://bugs.webkit.org/show_bug.cgi?id=222993 <rdar://75235585>

Reviewed by Alex Christensen.

NSURL generates a single line of console output when we use [NSURL init]. We can avoid hitting this
message by using the preferred default initializer.

Found by existing tests (e.g.: Animation/balls.html)

* Shared/Cocoa/ArgumentCodersCocoa.mm:
(-[WKSecureCodingURLWrapper initWithCoder:]):
(-[WKSecureCodingURLWrapper initWithURL:]):


Canonical link: https://commits.webkit.org/235109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274191 268f45cc-cd09-0410-ab3c-d52691b4dbfc